# userservice-v1

./: .coveragerc  .isort.cfg  .prospector.yml  .pylintrc  .semgrep_rules.yml  LICENSE  Readme.md  docker-compose.yml  dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  static_validation.sh
userservice/: apps.py  forms.py  models.py  pyproject.toml  sendmail.py  serializers.py  urls.py  views.py
userservice/migrations/: 0001_initial.py  0002_loginattempt_lockout_duration.py  0003_alter_loginattempt_lockout_duration.py  0004_alter_loginattempt_lockout_duration.py  0005_alter_loginattempt_lockout_duration.py  0006_alter_loginattempt_lockout_duration.py  0007_alter_loginattempt_last_attempt_time.py  0008_alter_loginattempt_lockout_duration.py  0009_loginattempt_max_login_attempts.py  0010_users_login_attempts.py  0011_remove_users_login_attempts_loginattempt_user_and_more.py  0012_alter_loginattempt_last_attempt_time.py  0013_otpverification.py  0014_alter_users_address_alter_users_username.py  0015_alter_users_phone_number.py  0016_alter_otpverification_email_otp_and_more.py  0017_users_avatar_alter_loginattempt_user.py  0018_alter_users_avatar.py  0019_alter_users_avatar.py  0020_alter_loginattempt_user_alter_users_avatar.py  0021_alter_loginattempt_last_attempt_time.py  0022_otpverification_email_otp_created_at_and_more.py  0023_alter_otpverification_email_otp_created_at_and_more.py  0024_alter_otpverification_email_otp_created_at_and_more.py
userservice/templates/userservice/: activation_email.html  activation_sent.html  home.html  (+5 more)
(+23 files in other folders)
